invisible meta box in IE and other IE/opera fixes

--- a/app/stylesheets/form.scss
+++ b/app/stylesheets/form.scss
@@ -144,6 +144,7 @@ form {
   .email textarea {
     font-size: 1em;
     border: 1px solid #999999;
+    border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     padding: 8px 8px;
