--- a/app/stylesheets/news.scss
+++ b/app/stylesheets/news.scss
@@ -4,7 +4,6 @@
   h2 a { color: #222; }
   
   .meta {
-    position: relative;
     margin: 8px 0;
     font-size: 16px;
     font-style: italic;
@@ -32,11 +31,12 @@
 
     .popup-inner {
       float: right;
-      font: helvetica;
+      font: helvetica, arial, sans-serif;
       height: 80px;
       width: 300px;
       padding: 5px;
       background-color: #242424;
+      border-radius: 5px;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       
@@ -85,6 +85,7 @@
     margin-bottom: 2px;
     margin-right: 5px;
     float: left;
+    border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     padding: 2px 7px;
